--- a/instagram-starter-code/css/style.css
+++ b/instagram-starter-code/css/style.css
@@ -1,10 +1,7 @@
-/* *{
-  box-sizing: border-box;
-} */
 
 /* content */
 
-body{
+span {
   background-color: #fafafa;
   font-family: Arial;
   color: #999;
@@ -36,6 +33,8 @@ li {
 }
 
 article {
+  height: 900px;
+  width: 900px;
   margin: 30px 244px 0 244px;
 }
 
@@ -44,7 +43,7 @@ article {
 .phone {
   float: left;
   height: auto;
-  width: auto;
+  width: 50%;
 }
 
 .facebook {
@@ -137,6 +136,9 @@ article {
   color: #999;
 }
 
+.line_break {
+  display: none;
+}
 /* Links */
 
 a:link {
@@ -152,8 +154,42 @@ a:link {
   }
 }
 
-@media (max-width: 860px) {
+@media (max-width: 875px) {
+
   .phone {
     display: none;
+  }
+  aside {
+    text-align: center;
+    position: relative;
+    background-color: #fff;
+  }
+  .section1,
+  .section2,
+  .section3 {
+    display: block;
+    border: none;
+    padding: 0 auto;
+    margin: 0 auto;
+    width: auto;
+  }
+  article {
+    background-color: #fff;
+    height: 100%;
+    width: auto;
+    max-width: 350px;
+
+  }
+  footer {
+    width: auto;
+  }
+  ul {
+    padding: 0 auto;
+    margin: 0 auto;
+    width:auto;
+    max-width: 350px;
+  }
+  .line_break {
+    display: block;
   }
 }
